Fixed alignment
Fixed alignment to work when a value is types in the left side bar
Added selected state so the selected align value is disabled

--- a/src/components/ls-field-format/ls-field-format.scss
+++ b/src/components/ls-field-format/ls-field-format.scss
@@ -282,6 +282,13 @@ button.ls-dv-tertiary-grey:hover {
   background: $gray-10;
 }
 
+.ls-dv-button-group button.ls-dv-active {
+  background: $gray-20;
+  color: $gray-100;
+  cursor: default;
+  pointer-events: none;
+}
+
 .ls-dv-button-group > :first-child {
   border-radius: 0.625rem 0 0 0.625rem;
 }
